##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(can       )
add_subdirectory(glcd      )
add_subdirectory(haptic    )
add_subdirectory(ioexpander)
add_subdirectory(lora      )
add_subdirectory(memory    )
add_subdirectory(sensor    )
add_subdirectory(serial    )
add_subdirectory(stepper   )

##########################################################################
